--- a/Gravity.GoogleMaps.StaticMapBuilder/Gravity.GoogleMaps.StaticMapBuilder.csproj
+++ b/Gravity.GoogleMaps.StaticMapBuilder/Gravity.GoogleMaps.StaticMapBuilder.csproj
@@ -6,6 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>./docs/Gravity.GoogleMaps.StaticMapBuilder.Documentation.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>./docs/Gravity.GoogleMaps.StaticMapBuilder.Documentation.xml</DocumentationFile>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="OneOf" Version="3.0.271" />
     </ItemGroup>
