--- a/qodana.yaml
+++ b/qodana.yaml
@@ -12,10 +12,14 @@ include:
   - name: AutoPropertyCanBeMadeGetOnly.Global
   - name: ClassNeverInstantiated.Global
   - name: ConvertToConstant.Global
-  - name: MemberCanBePrivate.Global
   - name: UseNullPropagation
   - name: ReplaceWithPrimaryConstructorParameter
-  - name: UnusedType.Global
-  - name: UnusedMember.Global
   - name: ArrangeTrailingCommaInMultilineLists
   - name: ArrangeObjectCreationWhenTypeEvident
+  - name: ArrangeThisQualifier
+exclude:
+  - name: UnusedMember.Global
+  - name: UnusedType.Global
+  - name: MemberCanBePrivate.Global
+  - name: ConvertIfStatementToNullCoalescingExpression
+  - name: ConvertIfStatementToConditionalTernaryExpression
