--- a/Gravity.GoogleMaps.StaticMapBuilder/Gravity.GoogleMaps.StaticMapBuilder.csproj
+++ b/Gravity.GoogleMaps.StaticMapBuilder/Gravity.GoogleMaps.StaticMapBuilder.csproj
@@ -7,9 +7,9 @@
         <DocumentationFile>./docs/Gravity.GoogleMaps.StaticMapBuilder.Documentation.xml</DocumentationFile>
         
         <!-- Infos NuGet -->
-        <PackageIcon>../Gravity.GoogleMaps.png</PackageIcon>
+        <PackageIconFullPath>../Gravity.GoogleMaps.png</PackageIconFullPath>
         <PackageId>Gravity.GoogleMaps.StaticMapBuilder</PackageId>
-        <Version>1.0.2</Version>
+        <Version>2.0.0</Version>
         <Authors>GravityApps</Authors>
         <Company>GravityApps</Company>
         <Description>Fluent, type-safe URL builder for the Google Static Maps API with full support for markers, styles, paths, and more.</Description>
