--- a/Gravity.GoogleMaps.TimeZoneBuilder/Gravity.GoogleMaps.TimeZoneBuilder.csproj
+++ b/Gravity.GoogleMaps.TimeZoneBuilder/Gravity.GoogleMaps.TimeZoneBuilder.csproj
@@ -9,8 +9,8 @@
         <DocumentationFile>.\docs\Gravity.GoogleMaps.TimeZoneBuilder.documentation.XML</DocumentationFile>
         
         <!-- Nuget infos -->
-        <PackageId>Gravity.GoogleMaps.TimeZonoeBuilder</PackageId>
-        <Version>1.0.0</Version>
+        <PackageId>Gravity.GoogleMaps.TimeZoneBuilder</PackageId>
+        <Version>1.0.1</Version>
         <Authors>GravityApps</Authors>
         <Company>GravityApps</Company>
         <Description>Fluent, type-safe URL builder for the Google Time Zone API, providing a clean and extensible way to generate fully-validated Time Zone API requests.</Description>
@@ -21,6 +21,7 @@
         <PackageProjectUrl>https://github.com/AntoninLolivier/Gravity.GoogleMaps</PackageProjectUrl>
         <IncludeSymbols>true</IncludeSymbols>
         <LangVersion>default</LangVersion>
+        <PackageIcon>Gravity.GoogleMaps.png</PackageIcon>
     </PropertyGroup>
 
     
