--- a/Gravity.GoogleMaps.StaticMapBuilder/Gravity.GoogleMaps.StaticMapBuilder.csproj
+++ b/Gravity.GoogleMaps.StaticMapBuilder/Gravity.GoogleMaps.StaticMapBuilder.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net10.0</TargetFramework>
+        <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -9,7 +9,7 @@
         
         <!-- Infos NuGet -->
         <PackageId>Gravity.GoogleMaps.StaticMapBuilder</PackageId>
-        <Version>2.2.1</Version>
+        <Version>2.2.2</Version>
         <Authors>GravityApps</Authors>
         <Company>GravityApps</Company>
         <Description>Fluent, type-safe URL builder for the Google Static Maps API with full support for markers, styles, paths, and more.</Description>
@@ -35,10 +35,7 @@
 
     <ItemGroup>
         <None Include="README.md" Pack="true" PackagePath="\"/>
-        <None Update="Gravity.GoogleMaps.png">
-          <Pack>True</Pack>
-          <PackagePath></PackagePath>
-        </None>
+        <None Include="Gravity.GoogleMaps.png" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
